--- a/docker/.env
+++ b/docker/.env
@@ -6,7 +6,7 @@ GID=1000
 PHP_NAME=php-library-template
 PHP_DOCKERFILE=docker/php/Dockerfile
 PHP_CONTEXT=../
-PHP_VERSION=fpm-alpine
+PHP_VERSION=8.0-fpm-alpine
 PHP_PORT=9000
 PHP_CONFIG_SOURCE=docker/php/php.ini
 PHP_CONFIG_TARGET=/usr/local/etc/php/php.ini
