--- a/composer.json
+++ b/composer.json
@@ -39,14 +39,13 @@
             "@test:unit"
         ],
         "lint:fix": "phpcbf",
-        "test:unit":  "phpunit --configuration phpunit.xml --do-not-cache-result --testsuite=Units --colors=always",
-        "test:integration":  "phpunit --configuration phpunit.xml --do-not-cache-result --testsuite=Integration --colors=always",
-        "test:coverage": "phpunit --configuration phpunit.xml --do-not-cache-result --colors=always --coverage-clover tmp/coverage/logs/clover.xml --coverage-html tmp/coverage",
+        "test:unit":  "phpunit --do-not-cache-result --testsuite=Units",
+        "test:coverage": "phpunit --do-not-cache-result --coverage-html tmp/coverage",
         "analyze": [
             "@psalm",
             "@lint"
         ],
-        "psalm": "psalm --config=psalm.xml --no-cache",
+        "psalm": "psalm --no-cache",
         "lint": "phpcs --no-cache"
     },
     "config": {
