--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,12 @@
 # .gitattributes
-.github           export-ignore
-.gitattributes    export-ignore
-.gitignore        export-ignore
-docker            export-ignore
-tmp               export-ignore
-Makefile          export-ignore
-*.neon            export-ignore
-SECURITY.md       export-ignore
+.github            export-ignore
+.gitattributes     export-ignore
+.gitignore         export-ignore
+tmp                export-ignore
+docker-compose-yml export-ignore
+Makefile           export-ignore
+*.neon             export-ignore
+SECURITY.md        export-ignore
 
 # Auto detect text files and perform LF normalization
 * text=auto
