--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "keywords": ["library"],
     "homepage": "https://github.com/mikel00per/php-library-template",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "A. Miguel Morillo",
+            "email": "mike@l00per.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "PhpLibraryTemplate\\": "src/"
@@ -12,41 +18,34 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "PhpLibraryTemplate\\Tests\\": "tests/"
+            "Tests\\PhpLibraryTemplate\\": "tests/"
         },
         "classmap": [
             "src/"
         ]
     },
-    "authors": [
-        {
-            "name": "Miguel Morillo",
-            "email": "miguelmwilliams@gmail.com"
-        }
-    ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "selective/test-traits": "^2.2",
-        "squizlabs/php_codesniffer": "^3.7",
-        "vimeo/psalm": "^4.30"
+        "mikelooper/code-style": "^0.0.1",
+        "phpunit/phpunit": "^10.4",
+        "vimeo/psalm": "^5.15"
     },
     "scripts": {
         "test": [
             "@analyze",
             "@test:unit"
         ],
-        "lint:fix": "phpcbf",
-        "test:unit":  "phpunit --do-not-cache-result --testsuite=Units",
-        "test:coverage": "phpunit --do-not-cache-result --coverage-html tmp/coverage",
         "analyze": [
             "@psalm",
             "@lint"
         ],
-        "psalm": "psalm --no-cache",
-        "lint": "phpcs --no-cache"
+        "test:unit": "phpunit --configuration tools/phpunit.xml --no-coverage",
+        "test:coverage": "phpunit --configuration tools/phpunit.xml --coverage-html tmp/coverage",
+        "psalm": "psalm -c tools/psalm.xml",
+        "lint": "ecs check -c tools/ecs.php",
+        "lint:fix": "ecs check --fix -c tools/ecs.php"
     },
     "config": {
         "process-timeout": 0,
